--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "reveal.js-remote",
   "description": "A presentation control server",
   "author": "Cologne Intelligence GmbH",
-  "license" : "MIT",
+  "license": "MIT",
   "dependencies": {
-    "express": "4.8.x",
     "command-line-args": "4.0.x",
     "command-line-usage": "4.0.x",
+    "express": "4.8.x",
+    "font-awesome": "^4.7.0",
     "qr-image": "3.2.0",
     "socket.io": "1.7.x",
     "uuid": "3.0.x"
