--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "reveal.js-remote",
   "description": "A presentation control server",
-  "author": "Cologne Intelligence GmbH",
+  "author": "Jochen Wierum, Cologne Intelligence GmbH",
   "license": "MIT",
   "dependencies": {
-    "command-line-args": "4.0.x",
-    "command-line-usage": "4.0.x",
-    "express": "4.8.x",
-    "font-awesome": "^4.7.0",
-    "qr-image": "3.2.0",
-    "socket.io": "1.7.x",
-    "uuid": "3.0.x"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
+    "command-line-args": "^5.1.1",
+    "command-line-usage": "^6.1.0",
+    "express": "^4.17.1",
+    "qr-image": "^3.2.0",
+    "socket.io": "^2.3.0",
+    "uuid": "^3.4.0"
   },
   "repository": {
     "type": "git",
